<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Image For</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="textTest">Test</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="textImageType">Image Type</string>
    <string name="textDone">Done</string>
    <string name="textImageSize">Image Size</string>
    <string name="textImageColor">Image Color</string>
    <string name="textSafety">Safety</string>
    <string name="textSite">Site</string>
    <string name="textSiteHint">espn.com</string>

    <string-array name="arrayImageTypes">
        <item>No Filter</item>
        <item>Photo</item>
        <item>Face</item>
        <item>Clipart</item>
        <item>Lineart</item>
    </string-array>
    <string-array name="arrayImageSizes">
        <item>No Filter</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>
    <string-array name="arrayImageColors">
        <item>No Filter</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="arrayImageSafety">
        <item>active</item>
        <item>moderate</item>
        <item>off</item>
    </string-array>
    
        <string name="single_touchimageview">Single TouchImageView</string>
    <string name="mirror_touchimageview">Mirroring Example</string>
    <string name="viewpager_example">ViewPager Example</string>
    <string name="switch_image_example">Switch Image Example</string>
    <string name="switch_scaletype_example">Switch ScaleType Example</string>
    
    <string name="get_scroll_position">getScrollPosition():</string>
    <string name="get_zoomed_rect">getZoomedRect():</string>
    <string name="get_current_zoom">getCurrentZoom():</string>
    <string name="mirroring_text">All touch gestures applied to one TouchImageView will be mirrored on the other.</string>
    <string name="swipe_viewpager">Swipe left or right to test ViewPager.</string>
    <string name="switch_image_text">Click TouchImageView to cycle through image resources. Note that the zoom state is maintained.</string>
    <string name="switch_scaletype_text">Click TouchImageView to cycle through supported ScaleTypes.</string>
    

</resources>